<resources>
  <string name="app_name">QuizApp</string>
  <string name="action_settings">Settings</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="start">START</string>
  <string name="name">Name</string>
  <string name="welcome">Welcome</string>
  <string name="please_enter_your_name">Please enter your name.</string>
  <string name="quizapp">QuizApp</string>
</resources>