<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
    <variable
        name="viewModel"
        type="com.clevertrap.quizapp.start.ViewModelStart" />
  </data>


  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingTop="5dp"
      android:paddingBottom="5dp"
      android:background="@drawable/ic_bg">
    <View
        android:id="@+id/viewWhite"
        android:layout_width="372dp"
        android:layout_height="257dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rect_white_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />
    <Button
        android:id="@+id/btnStart"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:onClick="@{() -> viewModel.onStartClick()}" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/viewWhite"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/viewWhite"
        app:layout_constraintTop_toBottomOf="@+id/txtEnterName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
      <androidx.appcompat.widget.AppCompatEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/name"
          android:maxLines="1"
          android:singleLine="true"
          android:text="@={viewModel.textMutable}"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />
    <TextView
        android:id="@+id/txtEnterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/please_enter_your_name"
        app:layout_constraintEnd_toEndOf="@+id/txtWelcome"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/txtWelcome"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="212dp" />
    <TextView
        android:id="@+id/textView"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/quizapp"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/viewWhite"
        app:layout_constraintEnd_toEndOf="@+id/txtWelcome"
        app:layout_constraintStart_toStartOf="@+id/txtWelcome" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>